crates/atm/tests/snapshots/ui_snapshots__compact_footer_default.snap
---
source: crates/atm/tests/ui_snapshots.rs
expression: buf
---
Buffer {
    area: Rect { x: 0, y: 0, width: 30, height: 1 },
    content: [
        "? help                        ",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
