crates/atm/tests/snapshots/ui_snapshots__compact_session_list_narrow.snap
---
source: crates/atm/tests/ui_snapshots.rs
expression: buf
---
Buffer {
    area: Rect { x: 0, y: 0, width: 28, height: 12 },
    content: [
        "┌ Sessions (2) ────────────┐",
        "│>▼ project-alpha          │",
        "│   >   45% main           │",
        "│   -   72% main           │",
        "│                          │",
        "│                          │",
        "│                          │",
        "│                          │",
        "│                          │",
        "│                          │",
        "│                          │",
        "└──────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Cyan, bg: Rgb(30, 30, 40), underline: Reset, modifier: BOLD,
        x: 2, y: 1, fg: Reset, bg: Rgb(30, 30, 40), underline: Reset, modifier: NONE,
        x: 4, y: 1, fg: White, bg: Rgb(30, 30, 40), underline: Reset, modifier: BOLD,
        x: 17, y: 1, fg: Reset, bg: Rgb(30, 30, 40), underline: Reset, modifier: NONE,
        x: 27, y: 1, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 2, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 2, fg: Blue, bg: Reset, underline: Reset, modifier: BOLD,
        x: 6, y: 2, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 11, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 2, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 2, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 2, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 3, fg: LightMagenta, bg: Reset, underline: Reset, modifier: BOLD,
        x: 6, y: 3, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 11, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 3, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 3, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 4, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 5, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 6, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 7, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 8, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 9, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 10, fg: White, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
