crates/atm/tests/snapshots/ui_snapshots__detail_panel_inline_empty.snap
---
source: crates/atm/tests/ui_snapshots.rs
expression: out
---
"┌ Details ─────────────────────────────────────────────────┐"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
