crates/atm/tests/snapshots/ui_snapshots__detail_panel_inline_with_capture_split.snap
---
source: crates/atm/tests/ui_snapshots.rs
expression: buf
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 24 },
    content: [
        "┌ Details ─────────────────────────────────────────────────┐",
        "│                                                          │",
        "│  Status: working                                         │",
        "│                                                          │",
        "│  ID: abc12345  Agent: general  Model: Opus 4.5           │",
        "│                                                          │",
        "│  Context [=========           ] 45% (45%)                │",
        "│                                                          │",
        "│  Duration: 5m    Activity: 10s ago                       │",
        "└──────────────────────────────────────────────────────────┘",
        "┌ Terminal ────────────────────────────────────────────────┐",
        "│$ cargo test                                              │",
        "│   Compiling atm-tui v0.2.2                               │",
        "│    Finished in 1.23s                                     │",
        "│running 5 tests                                           │",
        "│test ui::snapshot ... ok                                  │",
        "│                                                          │",
        "│                                                          │",
        "│                                                          │",
        "│                                                          │",
        "│                                                          │",
        "│                                                          │",
        "│                                                          │",
        "└──────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 1, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: BOLD,
        x: 11, y: 2, fg: Blue, bg: Reset, underline: Reset, modifier: BOLD,
        x: 18, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 2, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 3, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: DarkGray, bg: Reset, underline: Reset, modifier: BOLD,
        x: 7, y: 4, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 4, fg: DarkGray, bg: Reset, underline: Reset, modifier: BOLD,
        x: 24, y: 4, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 4, fg: DarkGray, bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 4, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 4, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 5, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: DarkGray, bg: Reset, underline: Reset, modifier: BOLD,
        x: 11, y: 6, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 37, y: 6, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 6, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 7, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: DarkGray, bg: Reset, underline: Reset, modifier: BOLD,
        x: 13, y: 8, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 8, fg: DarkGray, bg: Reset, underline: Reset, modifier: BOLD,
        x: 29, y: 8, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 36, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 8, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 10, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 11, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 12, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 13, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 16, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 17, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 18, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 19, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 20, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 21, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 22, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
