crates/atm/tests/snapshots/ui_snapshots__footer_in_tmux.snap
---
source: crates/atm/tests/ui_snapshots.rs
expression: snap
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ j/↓ down  k/↑ up  gg top  G end  ^d/^u page    |  Enter jump  r rescan  q qui│"
"└──────────────────────────────────────────────────────────────────────────────┘"
