crates/atm/tests/snapshots/ui_snapshots__header_connected_with_sessions.snap
---
source: crates/atm/tests/ui_snapshots.rs
expression: out
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ATM - Claude Code Monitor | Connected | 2 sessions | $1.70 | avg 58% | 1 worki│"
"└──────────────────────────────────────────────────────────────────────────────┘"
