crates/atm/tests/snapshots/ui_snapshots__header_disconnected_with_retries.snap
---
source: crates/atm/tests/ui_snapshots.rs
expression: buf
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 3 },
    content: [
        "┌──────────────────────────────────────────────────────────────────────────────┐",
        "│ATM - Agent Tmux Manager | Disconnected (retrying...)                         │",
        "└──────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 4, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 1, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
        x: 54, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 1, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
