crates/atm/tests/snapshots/ui_snapshots__help_popup_in_tmux.snap
---
source: crates/atm/tests/ui_snapshots.rs
expression: buf
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 40 },
    content: [
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                        ┌ Help ────────────────────────────────────────────────────────────────┐                        ",
        "                        │                                                                      │                        ",
        "                        │  Navigation                                                          │                        ",
        "                        │                                                                      │                        ",
        "                        │    j / ↓       Move down                                             │                        ",
        "                        │    k / ↑       Move up                                               │                        ",
        "                        │    0 / gg      Go to top                                             │                        ",
        "                        │    G           Go to bottom                                          │                        ",
        "                        │    Ctrl-d      Half page down                                        │                        ",
        "                        │    Ctrl-u      Half page up                                          │                        ",
        "                        │    Ngg         Go to row N                                           │                        ",
        "                        │    Nj / Nk     Move N rows                                           │                        ",
        "                        │                                                                      │                        ",
        "                        │  Actions                                                             │                        ",
        "                        │                                                                      │                        ",
        "                        │    Enter       Jump to session (leaf) / toggle fold (group)          │                        ",
        "                        │    r           Rescan / refresh                                      │                        ",
        "                        │    q           Quit                                                  │                        ",
        "                        │    ?           Toggle this help                                      │                        ",
        "                        │    Esc         Close help / quit                                     │                        ",
        "                        │    Ctrl-c      Quit                                                  │                        ",
        "                        │                                                                      │                        ",
        "                        │  Navigation                                                          │                        ",
        "                        │                                                                      │                        ",
        "                        │    h / l       Expand collapsed group (open-only)                    │                        ",
        "                        │    zc/zo/za    Close / Open / Toggle fold (vim)                      │                        ",
        "                        │    zM / zR     Collapse all / Expand all folds                       │                        ",
        "                        └──────────────────────────────────────────────────────────────────────┘                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 6, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 7, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 7, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 8, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 8, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 37, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 8, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 9, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 9, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 10, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 10, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 10, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 11, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 11, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 11, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 12, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 12, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 12, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 13, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 13, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 13, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 14, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 14, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 14, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 15, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 15, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 15, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 16, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 16, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 16, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 17, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 17, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 17, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 18, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 18, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 19, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 19, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 34, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 19, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 20, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 20, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 21, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 21, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 21, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 22, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 22, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 22, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 23, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 23, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 23, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 24, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 24, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 24, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 25, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 25, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 25, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 26, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 26, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 26, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 26, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 26, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 27, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 27, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 28, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 28, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 37, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 28, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 29, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 29, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 30, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 30, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 30, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 31, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 31, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 31, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 32, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 32, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 32, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 32, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 32, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 33, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 33, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
