crates/atm/tests/snapshots/ui_snapshots__session_list_attention_needed_row.snap
---
source: crates/atm/tests/ui_snapshots.rs
expression: buf
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 8 },
    content: [
        "┌ Sessions (1) ────────────────────────┐",
        "│>▼ project-alpha !                    │",
        "│   !   88% att00000 [claude] Opus 4.5 │",
        "│                                      │",
        "│                                      │",
        "│                                      │",
        "│                                      │",
        "└──────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Cyan, bg: Rgb(30, 30, 40), underline: Reset, modifier: BOLD,
        x: 2, y: 1, fg: Reset, bg: Rgb(30, 30, 40), underline: Reset, modifier: NONE,
        x: 4, y: 1, fg: White, bg: Rgb(30, 30, 40), underline: Reset, modifier: BOLD,
        x: 17, y: 1, fg: Yellow, bg: Rgb(30, 30, 40), underline: Reset, modifier: NONE,
        x: 19, y: 1, fg: Reset, bg: Rgb(30, 30, 40), underline: Reset, modifier: NONE,
        x: 39, y: 1, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Cyan, bg: Rgb(50, 40, 0), underline: Reset, modifier: BOLD,
        x: 2, y: 2, fg: Reset, bg: Rgb(50, 40, 0), underline: Reset, modifier: NONE,
        x: 4, y: 2, fg: Yellow, bg: Rgb(50, 40, 0), underline: Reset, modifier: BOLD,
        x: 11, y: 2, fg: Reset, bg: Rgb(50, 40, 0), underline: Reset, modifier: NONE,
        x: 12, y: 2, fg: DarkGray, bg: Rgb(50, 40, 0), underline: Reset, modifier: NONE,
        x: 20, y: 2, fg: Reset, bg: Rgb(50, 40, 0), underline: Reset, modifier: NONE,
        x: 21, y: 2, fg: Yellow, bg: Rgb(50, 40, 0), underline: Reset, modifier: NONE,
        x: 29, y: 2, fg: Reset, bg: Rgb(50, 40, 0), underline: Reset, modifier: NONE,
        x: 30, y: 2, fg: White, bg: Rgb(50, 40, 0), underline: Reset, modifier: NONE,
        x: 38, y: 2, fg: Reset, bg: Rgb(50, 40, 0), underline: Reset, modifier: NONE,
        x: 39, y: 2, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 3, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 4, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 5, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 6, fg: White, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
