crates/atm/tests/snapshots/ui_snapshots__session_list_collapsed_with_attention_count.snap
---
source: crates/atm/tests/ui_snapshots.rs
expression: buf
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 6 },
    content: [
        "┌ Sessions (2) ────────────────────────┐",
        "│>▸ project-alpha (2) !                │",
        "│                                      │",
        "│                                      │",
        "│                                      │",
        "└──────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Cyan, bg: Rgb(30, 30, 40), underline: Reset, modifier: BOLD,
        x: 2, y: 1, fg: Reset, bg: Rgb(30, 30, 40), underline: Reset, modifier: NONE,
        x: 4, y: 1, fg: White, bg: Rgb(30, 30, 40), underline: Reset, modifier: BOLD,
        x: 17, y: 1, fg: DarkGray, bg: Rgb(30, 30, 40), underline: Reset, modifier: NONE,
        x: 21, y: 1, fg: Yellow, bg: Rgb(30, 30, 40), underline: Reset, modifier: NONE,
        x: 23, y: 1, fg: Reset, bg: Rgb(30, 30, 40), underline: Reset, modifier: NONE,
        x: 39, y: 1, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 2, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 3, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 4, fg: White, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
